--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
-logs/
+node_modules
+package-lock.json
 npm-debug.log
 yarn-error.log
-node_modules/
-package-lock.json
-yarn.lock
-coverage/
-.idea/
-run/
-.DS_Store
+
 *.sw*
 *.un~
-typings/
-.nyc_output/
+
+typings
+run
+logs
+
+.DS_Store
+.vscode
+.idea
