--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "color-gradient-picker-vue3": "^0.1.4",
     "dayjs": "^1.11.5",
     "egg": "^2",
     "egg-redis": "^2.4.0",
@@ -29,6 +30,7 @@
     "start": "egg-scripts start --daemon --title=egg-server-wx_send_template",
     "stop": "egg-scripts stop --title=egg-server-wx_send_template",
     "dev": "egg-bin dev",
+    "ac": "EGG_SERVER_ENV=ac egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
