fix: 处理action error

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,32 +1,27 @@
 name: Timer
 
 on:
-	schedule:
-		- cron: '0 0 8 ? * ?'
-	workflow_dispatch:
+  schedule:
+    - cron:  '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
-	growth:
-		runs-on: ubuntu-latest
-		steps:
-			- uses: actions/checkout@v3
-			- name: Setup node
-				uses: actions/setup-node@v3
-				with:
-					node-version: '16.14.2'
-
-			- name: Depend install and serve
-				env:
-					WXAPPID: ${{ secrets.WXAPPID }}
-					WXSECRET: ${{ secrets.WXSECRET }}
-					WXTOKEN: ${{ secrets.token }}
-					TEMPLATEID: ${{ secrets.TEMPLATEID }}
-					TIANXINGKEY: ${{ secrets.TIANXINGKEY }} 
-					AMAPKEY: ${{ secrets.AMAPKEY }}
-				run: |
-					npm install
-					npm run ac
-
-			- name: Handle Shell
-				run: curl -X POST http://127.0.0.1:7001/sendNotify
-				
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.14.0'
+      - name: Depend install and serve
+        env:
+          WXAPPID: ${{ secrets.WXAPPID }}
+          WXSECRET: ${{ secrets.WXSECRET }}
+          WXTOKEN: ${{ secrets.token }}
+          TEMPLATEID: ${{ secrets.TEMPLATEID }}
+          TIANXINGKEY: ${{ secrets.TIANXINGKEY }} 
+          AMAPKEY: ${{ secrets.AMAPKEY }}
+        run: |
+          npm install
+          npm run ac
