--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "start": "egg-scripts start --daemon --title=egg-server-wx_send_template",
     "stop": "egg-scripts stop --title=egg-server-wx_send_template",
     "dev": "egg-bin dev",
-    "ac": "EGG_SERVER_ENV=ac egg-bin dev",
+    "devac": "EGG_SERVER_ENV=ac egg-bin dev",
+    "startac": "EGG_SERVER_ENV=ac egg-scripts start --daemon --title=egg-server-wx_send_templatenp",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
     "test-local": "egg-bin test",
