--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -24,4 +24,8 @@ jobs:
           AMAPKEY: ${{ secrets.AMAPKEY }}
         run: |
           npm install
-          npm run ac
+          npm run startac
+      - name: Send Notify
+        run: curl -X POST http://127.0.0.1:7001/sendNotify
+      - name: Stop Service
+        run: npm run stop
