--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        width:
+          ref: 'main'
       - name: Setup node
         uses: actions/setup-node@v3
         with:
