--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        width:
+        with:
           ref: 'main'
       - name: Setup node
         uses: actions/setup-node@v3
