--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "color-gradient-picker-vue3": "^2.0.7",
     "dayjs": "^1.11.5",
     "egg": "^2",
     "egg-redis": "^2.4.0",
